edition = "2023";

package myorg.demo.v1;

import "buf/validate/validate.proto";

option go_package = "example.com/gen/myorg/demo/v1;demov1";

message GetBalanceRequest {}

message GetBalanceResponse {
  // The user's current balance in koinu.
  int64 koinu = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gte = 0
  ];
}
